# muchen-journey-vnext

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
config/: wp06_release_gate.local.json  wp08_browser_smoke.json  wp08_staging.json
contracts/: openapi.json
docs/: 00_DOCUMENT_MAP_AND_GOVERNANCE.md  01_REFACTOR_POSTMORTEM.md  02_GREENFIELD_CHARTER_AND_ISOLATION_CONTRACT.md  03_PRODUCT_BRIEF_AND_PRD.md  04_USER_JOURNEYS_IA_AND_UX_CONTRACT.md  05_DOMAIN_MODEL_STATE_MACHINE_AND_DATA.md  06_SYSTEM_ARCHITECTURE_AND_ADRS.md  07_API_EVENT_AND_INTEGRATION_CONTRACT.md  08_SECURITY_PRIVACY_AND_PERMISSION_MODEL.md  09_TEST_UAT_AND_QUALITY_STRATEGY.md  10_DELIVERY_PLAN_AND_ENGINEERING_RULES.md  11_RELEASE_MIGRATION_AND_OPERATIONS_PLAN.md  12_DECISION_RISK_AND_OPEN_QUESTIONS.md  13_REQUIREMENTS_TRACEABILITY_MATRIX.md  14_UI_FOUNDATIONS_AND_COMPONENT_CONTRACT.md  15_P0_CONTENT_RUBRIC_AND_OPERATIONS_SPEC.md  16_WP00_AND_WALKING_SKELETON_EVIDENCE.md  17_WP01_INVITE_IDENTITY_SESSION_EVIDENCE.md  18_WP02_CURRENT_ACTION_TASK_VERSION_EVIDENCE.md  19_WP03_SUBMISSION_ATTACHMENT_REVISION_EVIDENCE.md  20_WP04_REVIEWER_WORKBENCH_EVALUATION_EVIDENCE.md  21_WP05_OUTCOME_HANDOFF_NOTIFICATION_TIMELINE_EVIDENCE.md  22_WP06_CONTROLLED_OPERATIONS_IMPORT_RECOVERY_RELEASE_EVIDENCE.md  23_G4_G6_NEXT_WORK_PACKAGES.md  24_WP07_CANDIDATE_BASELINE_SUPPLY_CHAIN_EVIDENCE.md  25_WP08_DEFINITION_OF_READY_EVIDENCE.md  26_WP08_VOLCENGINE_STAGING_PATH_EVIDENCE.md
migrations/: env.py
(+113 files in other folders)
