[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "muchen-journey-vnext"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.2",
  "psycopg[binary]==3.3.4",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.51",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
test = ["httpx2==2.7.0", "pytest==9.1.1"]

[tool.setuptools.packages.find]
where = ["apps/api", "apps/worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
cache_dir = "/tmp/pytest-cache"
pythonpath = ["."]
